--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Mini Message Board</h1>
+    <ul>
+        <% for (let i = 0; i < messages.length; i++) { %>
+            <li><strong><%= messages[i].user %></strong>: <%= messages[i].text %> (<%= messages[i].added %> )</li>
+        <% } %> 
+    </ul>
 </body>
 </html>
