--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mini Message Board</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Mini Message Board</h1>
     <ul>
-        <% for (let i = 0; i < messages.length; i++) { %>
-            <li><strong><%= messages[i].user %></strong>: <%= messages[i].text %> (<%= messages[i].added %> )</li>
-        <% } %> 
+      <% for (let i = 0; i < messages.length; i++) { %>
+      <li>
+        <strong><%= messages[i].user %></strong>: <%= messages[i].text %> (<%=
+        messages[i].added %> )
+      </li>
+      <% } %>
     </ul>
-</body>
+  </body>
 </html>
