Added form element and new route

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,8 @@
     <title>Mini Message Board</title>
   </head>
   <body>
+    <div><a href="new">New Message</a></div>
+
     <h1>Mini Message Board</h1>
     <ul>
       <% for (let i = 0; i < messages.length; i++) { %>
