--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,8 +7,13 @@
   </head>
   <body>
     <div><a href="new">New Message</a></div>
-
-    <h1>Mini Message Board</h1>
+<div>
+  <img src="/Enterprise_Forward.jpg" alt="USS Enterprise (NCC-1701-D)">
+</div>
+    <h1>
+      USS Enterprise (NCC-1701-D) - LCARS (Library Computer Access/Retrieval
+      System) command log
+    </h1>
     <ul>
       <% for (let i = 0; i < messages.length; i++) { %>
       <li>
