Finished Project:Mini Message Board, NodeJS Course

--- a/views/form.ejs
+++ b/views/form.ejs
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/styles.css" />
     <title>New Message</title>
   </head>
   <body>
@@ -20,6 +21,7 @@
             id="authorName"
             name="authorName"
             value="Captain Picard"
+            required
           />
         </div>
         <div>
@@ -29,7 +31,8 @@
             type="text"
             id="messageText"
             name="messageText"
-            value="Message"
+            value=""
+            required
           />
         </div>
         <div>
