--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
     <ul>
       <% for (let i = 0; i < messages.length; i++) { %>
       <li>
-        <strong><%= messages[i].user %></strong>: <%= messages[i].text %> (<%=
+        <strong><%= messages[i].users %></strong>: <%= messages[i].text %> (<%=
         messages[i].added %> )
         <a href="<%= [i] %>">Open Message</a>
       </li>
