Added error handling for message ID route

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
       <li>
         <strong><%= messages[i].users %></strong>: <%= messages[i].text %> (<%=
         messages[i].added %> )
-        <a href="<%= [i] %>">Open Message</a>
+        <a href="<%= [i+1] %>">Open Message</a>
       </li>
       <% } %>
     </ul>
